grammar/grammar
program             : commands EOL

commands            : boolean (SEMI boolean)* | SEMI

boolean             : commands (AND | OR commands)*

pipes_redirs_list   : redir_sequence (PIPE redir_sequence)*

redir_sequence      : pipes_sequence (GREAT file)*

pipe_sequence       : command (PIPE command)*

command             : WORD

file                : FILE
